--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>konipai-tote-bag-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Konipai Tote Bags</title>
+    <meta name="description" content="Discover our collection of beautifully crafted tote bags, designed for style and sustainability." />
+    <meta name="author" content="Konipai" />
     <meta property="og:image" content="/og-image.png" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="https://backend-pocketbase.7za6uc.easypanel.host/api/files/pbc_3420988878/4191n4252f6p3i4/artboard_4_dcvhimtq08.svg" />
+    <link rel="icon" type="image/png" href="https://backend-pocketbase.7za6uc.easypanel.host/api/files/pbc_3420988878/4191n4252f6p3i4/artboard_4_dcvhimtq08.svg" />
+    <link rel="apple-touch-icon" href="https://backend-pocketbase.7za6uc.easypanel.host/api/files/pbc_3420988878/4191n4252f6p3i4/artboard_4_dcvhimtq08.svg" />
   </head>
 
   <body>
