--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Konipai Tote Bags</title>
     <meta name="description" content="Discover our collection of beautifully crafted tote bags, designed for style and sustainability." />
     <meta name="author" content="Konipai" />
