Optimize website performance with code splitting, image lazy loading, and caching

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="author" content="Konipai" />
     <meta property="og:image" content="/og-image.png" />
     
+    <!-- Preload and optimize connection to backend -->
+    <link rel="preconnect" href="https://backend-pocketbase.7za6uc.easypanel.host">
+    <link rel="dns-prefetch" href="https://backend-pocketbase.7za6uc.easypanel.host">
+    
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="https://backend-pocketbase.7za6uc.easypanel.host/api/files/pbc_3420988878/4191n4252f6p3i4/artboard_4_dcvhimtq08.svg" />
     <link rel="icon" type="image/png" href="https://backend-pocketbase.7za6uc.easypanel.host/api/files/pbc_3420988878/4191n4252f6p3i4/artboard_4_dcvhimtq08.svg" />
